...
}

@Preview
@Composable
private fun CustomTopAppBarPreview() {
    CustomTopAppBar(
        title = "Notes",
        onNavigationClick = {},
        onActionClick = {}
    )
}

